src/FireWrapper/wrapper.h

typedef struct ImFontAtlasCustomRect ImFontAtlasCustomRect;
typedef struct ImVec4 ImVec4;
typedef struct ImVec2 ImVec2;
typedef struct ImFontGlyphRangesBuilder ImFontGlyphRangesBuilder;
typedef struct ImFontGlyph ImFontGlyph;
typedef struct ImFontConfig ImFontConfig;
typedef struct ImFontAtlas ImFontAtlas;
typedef struct ImFont ImFont;
typedef struct ImDrawVert ImDrawVert;
typedef struct ImDrawListSplitter ImDrawListSplitter;
typedef struct ImDrawListSharedData ImDrawListSharedData;
typedef struct ImDrawList ImDrawList;
typedef struct ImDrawCmd ImDrawCmd;
struct ImDrawCmd;
struct ImDrawList;
struct ImDrawListSharedData;
struct ImDrawListSplitter;
struct ImDrawVert;
struct ImFont;
struct ImFontAtlas;
struct ImFontConfig;
struct ImFontGlyph;
struct ImFontGlyphRangesBuilder;
typedef int ImGuiMouseCursor;
typedef int ImDrawListFlags;
typedef int ImFontAtlasFlags;
typedef void* ImTextureID;
typedef ImWchar16 ImWchar;
typedef unsigned char ImU8;
typedef unsigned int ImU32;
typedef unsigned short ImDrawIdx;
struct ImDrawListSharedData;
typedef struct ImVector_float { int Size; int Capacity; float* Data; } ImVector_float;
typedef struct ImVector_ImWchar { int Size; int Capacity; ImWchar* Data; } ImVector_ImWchar;
typedef struct ImVector_ImDrawVert { int Size; int Capacity; ImDrawVert* Data; } ImVector_ImDrawVert;
typedef struct ImVector_ImVec4 { int Size; int Capacity; ImVec4* Data; } ImVector_ImVec4;
typedef struct ImVector_ImFontGlyph { int Size; int Capacity; ImFontGlyph* Data; } ImVector_ImFontGlyph;
typedef struct ImVector_ImDrawChannel { int Size; int Capacity; ImDrawChannel* Data; } ImVector_ImDrawChannel;
typedef struct ImVector_ImU32 { int Size; int Capacity; ImU32* Data; } ImVector_ImU32;
typedef struct ImVector_ImFontAtlasCustomRect { int Size; int Capacity; ImFontAtlasCustomRect* Data; } ImVector_ImFontAtlasCustomRect;
typedef struct ImVector_ImTextureID { int Size; int Capacity; ImTextureID* Data; } ImVector_ImTextureID;
typedef struct ImVector_ImFontConfig { int Size; int Capacity; ImFontConfig* Data; } ImVector_ImFontConfig;
typedef struct ImVector_ImVec2 { int Size; int Capacity; ImVec2* Data; } ImVector_ImVec2;
typedef struct ImVector_ImDrawCmd { int Size; int Capacity; ImDrawCmd* Data; } ImVector_ImDrawCmd;
typedef struct ImVector_ImFontPtr { int Size; int Capacity; ImFont** Data; } ImVector_ImFontPtr;
typedef struct ImVector_ImDrawIdx { int Size; int Capacity; ImDrawIdx* Data; } ImVector_ImDrawIdx;
struct ImVec2
{
	float x, y;
};
struct ImVec4
{
	float x, y, z, w;
};
struct ImDrawCmd
{
	ImVec4 ClipRect;
	ImTextureID TextureId;
	unsigned int VtxOffset;
	unsigned int IdxOffset;
	unsigned int ElemCount;
	ImDrawCallback UserCallback;
	void* UserCallbackData;
};
struct ImDrawVert
{
	ImVec2 pos;
	ImVec2 uv;
	ImU32 col;
};
struct ImDrawListSplitter
{
	int _Current;
	int _Count;
	ImVector_ImDrawChannel _Channels;
};
struct ImDrawList
{
	ImVector_ImDrawCmd CmdBuffer;
	ImVector_ImDrawIdx IdxBuffer;
	ImVector_ImDrawVert VtxBuffer;
	ImDrawListFlags Flags;
	const ImDrawListSharedData* _Data;
	const char* _OwnerName;
	unsigned int _VtxCurrentIdx;
	ImDrawVert* _VtxWritePtr;
	ImDrawIdx* _IdxWritePtr;
	ImVector_ImVec4 _ClipRectStack;
	ImVector_ImTextureID _TextureIdStack;
	ImVector_ImVec2 _Path;
	ImDrawCmd _CmdHeader;
	ImDrawListSplitter _Splitter;
};
struct ImFontConfig
{
	void* FontData;
	int FontDataSize;
	bool FontDataOwnedByAtlas;
	int FontNo;
	float SizePixels;
	int OversampleH;
	int OversampleV;
	bool PixelSnapH;
	ImVec2 GlyphExtraSpacing;
	ImVec2 GlyphOffset;
	const ImWchar* GlyphRanges;
	float GlyphMinAdvanceX;
	float GlyphMaxAdvanceX;
	bool MergeMode;
	unsigned int RasterizerFlags;
	float RasterizerMultiply;
	ImWchar EllipsisChar;
	char Name[40];
	ImFont* DstFont;
};
struct ImFontGlyph
{
	unsigned int Codepoint : 31;
	unsigned int Visible : 1;
	float AdvanceX;
	float X0, Y0, X1, Y1;
	float U0, V0, U1, V1;
};
struct ImFontGlyphRangesBuilder
{
	ImVector_ImU32 UsedChars;
};
struct ImFontAtlasCustomRect
{
	unsigned short Width, Height;
	unsigned short X, Y;
	unsigned int GlyphID;
	float GlyphAdvanceX;
	ImVec2 GlyphOffset;
	ImFont* Font;
};
struct ImFontAtlas
{
	bool Locked;
	ImFontAtlasFlags Flags;
	ImTextureID TexID;
	int TexDesiredWidth;
	int TexGlyphPadding;
	unsigned char* TexPixelsAlpha8;
	unsigned int* TexPixelsRGBA32;
	int TexWidth;
	int TexHeight;
	ImVec2 TexUvScale;
	ImVec2 TexUvWhitePixel;
	ImVector_ImFontPtr Fonts;
	ImVector_ImFontAtlasCustomRect CustomRects;
	ImVector_ImFontConfig ConfigData;
	int CustomRectIds[1];
};
struct ImFont
{
	ImVector_float IndexAdvanceX;
	float FallbackAdvanceX;
	float FontSize;
	ImVector_ImWchar IndexLookup;
	ImVector_ImFontGlyph Glyphs;
	const ImFontGlyph* FallbackGlyph;
	ImVec2 DisplayOffset;
	ImFontAtlas* ContainerAtlas;
	const ImFontConfig* ConfigData;
	short ConfigDataCount;
	ImWchar FallbackChar;
	ImWchar EllipsisChar;
	bool DirtyLookupTables;
	float Scale;
	float Ascent, Descent;
	int MetricsTotalSurface;
	ImU8 Used4kPagesMap[(0xFFFF + 1) / 4096 / 8];
};
struct ImDrawListSharedData
{
	ImVec2 TexUvWhitePixel;
	ImFont* Font;
	float FontSize;
	float CurveTessellationTol;
	float CircleSegmentMaxError;
	ImVec4 ClipRectFullscreen;
	ImDrawListFlags InitialFlags;
	ImVec2 ArcFastVtx[12 * 1];
	ImU8 CircleSegmentCounts[64];
};
typedef enum {
	ImGuiPlotType_Lines,
	ImGuiPlotType_Histogram
}ImGuiPlotType;
typedef ImVector<float> ImVector_float;
typedef ImVector<ImWchar> ImVector_ImWchar;
typedef ImVector<ImDrawVert> ImVector_ImDrawVert;
typedef ImVector<ImVec4> ImVector_ImVec4;
typedef ImVector<ImFontGlyph> ImVector_ImFontGlyph;
typedef ImVector<ImDrawChannel> ImVector_ImDrawChannel;
typedef ImVector<ImU32> ImVector_ImU32;
typedef ImVector<ImFontAtlasCustomRect> ImVector_ImFontAtlasCustomRect;
typedef ImVector<ImTextureID> ImVector_ImTextureID;
typedef ImVector<ImFontConfig> ImVector_ImFontConfig;
typedef ImVector<ImVec2> ImVector_ImVec2;
typedef ImVector<ImDrawCmd> ImVector_ImDrawCmd;
typedef ImVector<ImFont*> ImVector_ImFontPtr;
typedef ImVector<ImDrawIdx> ImVector_ImDrawIdx;
CIMGUI_API void igPlotLinesFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igPlotHistogramFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igSetAllocatorFunctions(void*(*alloc_func)(size_t sz, void* user_data), void(*free_func)(void* ptr, void* user_data), void* user_data);
CIMGUI_API ImDrawListSplitter* ImDrawListSplitter_ImDrawListSplitter(void);
CIMGUI_API void ImDrawListSplitter_Split(ImDrawListSplitter* self, ImDrawList* draw_list, int count);
CIMGUI_API void ImDrawListSplitter_Merge(ImDrawListSplitter* self, ImDrawList* draw_list);
CIMGUI_API void ImDrawListSplitter_SetCurrentChannel(ImDrawListSplitter* self, ImDrawList* draw_list, int channel_idx);
CIMGUI_API ImFontConfig* ImFontConfig_ImFontConfig(void);
CIMGUI_API void ImFontConfig_destroy(ImFontConfig* self);
CIMGUI_API void ImFontGlyphRangesBuilder_AddChar(ImFontGlyphRangesBuilder* self, ImWchar c);
CIMGUI_API void ImFontGlyphRangesBuilder_AddText(ImFontGlyphRangesBuilder* self, const char* text, const char* text_end);
CIMGUI_API void ImFontGlyphRangesBuilder_AddRanges(ImFontGlyphRangesBuilder* self, const ImWchar* ranges);
CIMGUI_API ImFontAtlasCustomRect* ImFontAtlasCustomRect_ImFontAtlasCustomRect(void);
CIMGUI_API void ImFontAtlasCustomRect_destroy(ImFontAtlasCustomRect* self);
CIMGUI_API bool ImFontAtlasCustomRect_IsPacked(ImFontAtlasCustomRect* self);
CIMGUI_API ImFontAtlas* ImFontAtlas_ImFontAtlas(void);
CIMGUI_API void ImFontAtlas_destroy(ImFontAtlas* self);
CIMGUI_API ImFont* ImFontAtlas_AddFont(ImFontAtlas* self, const ImFontConfig* font_cfg);
CIMGUI_API ImFont* ImFontAtlas_AddFontDefault(ImFontAtlas* self, const ImFontConfig* font_cfg);
CIMGUI_API ImFont* ImFontAtlas_AddFontFromFileTTF(ImFontAtlas* self, const char* filename, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
CIMGUI_API ImFont* ImFontAtlas_AddFontFromMemoryTTF(ImFontAtlas* self, void* font_data, int font_size, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
CIMGUI_API ImFont* ImFontAtlas_AddFontFromMemoryCompressedTTF(ImFontAtlas* self, const void* compressed_font_data, int compressed_font_size, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
CIMGUI_API ImFont* ImFontAtlas_AddFontFromMemoryCompressedBase85TTF(ImFontAtlas* self, const char* compressed_font_data_base85, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
CIMGUI_API void ImFontAtlas_ClearInputData(ImFontAtlas* self);
CIMGUI_API void ImFontAtlas_ClearTexData(ImFontAtlas* self);
CIMGUI_API void ImFontAtlas_ClearFonts(ImFontAtlas* self);
CIMGUI_API void ImFontAtlas_Clear(ImFontAtlas* self);
CIMGUI_API bool ImFontAtlas_Build(ImFontAtlas* self);
CIMGUI_API void ImFontAtlas_GetTexDataAsAlpha8(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel);
CIMGUI_API void ImFontAtlas_GetTexDataAsRGBA32(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel);
CIMGUI_API bool ImFontAtlas_IsBuilt(ImFontAtlas* self);
CIMGUI_API void ImFontAtlas_SetTexID(ImFontAtlas* self, ImTextureID id);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesDefault(ImFontAtlas* self);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesKorean(ImFontAtlas* self);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesJapanese(ImFontAtlas* self);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesChineseFull(ImFontAtlas* self);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesChineseSimplifiedCommon(ImFontAtlas* self);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesCyrillic(ImFontAtlas* self);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesThai(ImFontAtlas* self);
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesVietnamese(ImFontAtlas* self);
CIMGUI_API int ImFontAtlas_AddCustomRectRegular(ImFontAtlas* self, int width, int height);
CIMGUI_API int ImFontAtlas_AddCustomRectFontGlyph(ImFontAtlas* self, ImFont* font, ImWchar id, int width, int height, float advance_x, const ImVec2 offset);
CIMGUI_API const ImFontAtlasCustomRect* ImFontAtlas_GetCustomRectByIndex(ImFontAtlas* self, int index);
CIMGUI_API void ImFontAtlas_CalcCustomRectUV(ImFontAtlas* self, const ImFontAtlasCustomRect* rect, ImVec2* out_uv_min, ImVec2* out_uv_max);
CIMGUI_API bool ImFontAtlas_GetMouseCursorTexData(ImFontAtlas* self, ImGuiMouseCursor cursor, ImVec2* out_offset, ImVec2* out_size, ImVec2 out_uv_border[2], ImVec2 out_uv_fill[2]);
CIMGUI_API ImFont* ImFont_ImFont(void);
CIMGUI_API void ImFont_destroy(ImFont* self);
CIMGUI_API const ImFontGlyph* ImFont_FindGlyph(ImFont* self, ImWchar c);
CIMGUI_API const ImFontGlyph* ImFont_FindGlyphNoFallback(ImFont* self, ImWchar c);
CIMGUI_API float ImFont_GetCharAdvance(ImFont* self, ImWchar c);
CIMGUI_API bool ImFont_IsLoaded(ImFont* self);
CIMGUI_API const char* ImFont_GetDebugName(ImFont* self);
CIMGUI_API void ImFont_CalcTextSizeA(ImVec2 *pOut, ImFont* self, float size, float max_width, float wrap_width, const char* text_begin, const char* text_end, const char** remaining);
CIMGUI_API const char* ImFont_CalcWordWrapPositionA(ImFont* self, float scale, const char* text, const char* text_end, float wrap_width);
CIMGUI_API void ImFont_RenderChar(ImFont* self, ImDrawList* draw_list, float size, ImVec2 pos, ImU32 col, ImWchar c);
CIMGUI_API void ImFont_RenderText(ImFont* self, ImDrawList* draw_list, float size, ImVec2 pos, ImU32 col, const ImVec4 clip_rect, const char* text_begin, const char* text_end, float wrap_width, bool cpu_fine_clip);
CIMGUI_API void ImFont_BuildLookupTable(ImFont* self);
CIMGUI_API void ImFont_ClearOutputData(ImFont* self);
CIMGUI_API void ImFont_GrowIndex(ImFont* self, int new_size);
CIMGUI_API void ImFont_AddGlyph(ImFont* self, ImWchar c, float x0, float y0, float x1, float y1, float u0, float v0, float u1, float v1, float advance_x);
CIMGUI_API void ImFont_AddRemapChar(ImFont* self, ImWchar dst, ImWchar src, bool overwrite_dst);
CIMGUI_API void ImFont_SetGlyphVisible(ImFont* self, ImWchar c, bool visible);
CIMGUI_API void ImFont_SetFallbackChar(ImFont* self, ImWchar c);
CIMGUI_API int igPlotEx(ImGuiPlotType plot_type, const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 frame_size);